[package]
name = "carina"
version = "0.1.0"
authors = ["Avi Srivastava <asrivastava@cs.stonybrook.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
bio = "0.32.0"
clap = "2.33.3"
#itertools = "0.9.0"
#rust-htslib = "0.33.0"
pretty_env_logger = "0.4.0"
